--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,28 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
-  
+
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6284.952669143682!2d-73.99738449915915!3d40.69754083299333!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a47df06b185%3A0xc889234bc07c42ee!2sBrooklyn+Heights%2C+Brooklyn%2C+NY!5e0!3m2!1sen!2sus!4v1547740154264" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+  <form action="#" method="post">
+    <label for ="fullname">Name</label>
+    <input type="text" id="fullname" name="fullname"
+    placeholder="your name" required>
+
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email"
+    placeholder="your email" required>
+
+
+    <label for="phone">Phone</label>
+    <input type="tel" id="phone" name="phone"
+    placeholder="your phone (optional)">
+
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="10"></textarea>
+    <input type="submit" value="send">
+
+  </form>
+
 </body>
 </html>
